fixed overflow bg colour on mobile, HTML5 rendering for the pandoc complier

--- a/css/style-1000px.css
+++ b/css/style-1000px.css
@@ -20,6 +20,11 @@
 		min-width: 960px;
 	}
 
+    html
+    {
+        background-color: #282b34;
+    }
+
 /*********************************************************************************/
 /* Wrappers                                                                      */
 /*********************************************************************************/
