--- a/css/style.css
+++ b/css/style.css
@@ -26,11 +26,7 @@
         font-weight: 400;
         color: #919499;
     }
-    html
-    {
-        background-color: #282b34;
-
-    }
+    
 
     h1,h2,h3,h4,h5,h6
     {
